# student-tasks-review

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
cocktail-shaker-sort/: CMakeLists.txt  README.md  main.cpp
linked-lists/: CMakeLists.txt  README.md  forward_list.hpp  io.hpp  list.hpp  main.cpp
prints-words-by-predicates/: CMakeLists.txt  README.md  main.cpp
stacks/: CMakeLists.txt  stack.cpp
